erDiagram
    Users ||--o{ Projects : "owns"
    Users ||--o{ Tasks : "assigned to"
    Users ||--o{ UserProjects : "member of"
    Projects ||--o{ Tasks : "contains"
    Projects ||--o{ UserProjects : "has members"

    Users {
        int user_id PK
        string name
        string email
    }

    Projects {
        int project_id PK
        string name
        int owner_id FK
        datetime created_at
    }

    Tasks {
        int task_id PK
        string title
        string description
        int project_id FK
        int assigned_to FK
        string status
        date due_date
    }

    UserProjects {
        int user_id PK, FK
        int project_id PK, FK
        string role
    }
